--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Hotel_Management_System
-main.class=hotel.management.system.SignUp
+main.class=hotel.management.system.Employer.SignUp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
